--- a/term/dependency injection.html
+++ b/term/dependency injection.html
@@ -1,9 +1,9 @@
-# Dependency injection
-## Intro
+<h1>Dependency injection</h1> 
+<h2>Intro</h2>
 Dependency injection refers a mechanism that initialize the an object in constructor with given parameters.
 
-## Example
-### Example 1
+<h2>Example</h2>
+Example 1
 Take the example from Android Studio Docs. ([2] in Ref section)
 
 A Car must have an engine.
