--- a/term/dependency injection.html
+++ b/term/dependency injection.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html5>
+<html>
+
+<body>
+    
 <h1>Dependency injection</h1> 
 <h2>Intro</h2>
 Dependency injection refers a mechanism that initialize the an object in constructor with given parameters.
@@ -68,3 +73,6 @@ When one
 [1] https://en.wikipedia.org/wiki/Dependency_injection
 
 [2] https://developer.android.com/training/dependency-injection
+
+</body>
+</html>
